BlocklyDuino
=======================

1.0 2012/11/
------------------
code name: Mindstorms

Feature: 

* add procedure support with return/null blocks

Change:
* clean blocks internal
* update blockly till r507, pretty print xml

Fix:
* names with object

Credit: gasolin

0.9 2012/11/11
------------------
code name: TECHNIC

Refactor blocks, rearrange import blocks and blocks with type checking

Feature: 

* add text blocks
* add blocks:
  Grove serial lcd effect
  Grove Sound Sensor
  PIR Motion sensor
  line finder

Change:

* separate Grove category into Grove(digital), Grove Analog, and Grove LCD
* make LCD allow to input text block
* update blockly till r504, support checkbox
* remove jquery dependency by implement ajax via XMLHttpRequest
* rearrange import blocks

Fix:
* appcache support

Credit: gasolin

0.8 2012/10/31
------------------
code name: DUPLO

make editor more friendly

Feature: 

* generate arduino code in textarea, easier to copy source
* auto focus to arduino code area, can use ctrl+a to select correct source
* load source via url param in same site with such "url=xxx" syntax
* include 2 examples
* upload potentiometer control servo video http://www.youtube.com/watch?v=u2Fp0KpWxik
* application cache block images and jquery
* add Grove LCD print, Grove LCD power block

Change:

* call profile params via 'profile.default.digital' instead of 'profile.arduino.digital'
* rename Potentiometer block to Rotary Angle block
* update blockly till r496, move core js into core folder
* move arduino language generator to top level generator/ folder
* reasonable default) change default delay time from 0 to 1000

Credit: gasolin


0.7 2012/10/18
------------------
code name: SPACE

refine bootstraping process

Feature: 

* promotion video http://www.youtube.com/watch?v=_swiyXcUvNY
* bootstraping sample blocks and document to easily custom blocks.

Change:

* update blockly till 10/18
* from blockly) Move include section always at top of the source file