@@ -335,7 +335,7 @@ Blockly.FieldTextInput.prototype.onHtmlInputBlur_=function(){this.closeEditor_(!
 Blockly.FieldTextInput.prototype.validate_=function(){var a=!0,b=Blockly.FieldTextInput.htmlInput_;this.validationFunc_&&(a=this.validationFunc_(b.value));a?Blockly.removeClass_(b,"blocklyInvalidInput"):Blockly.addClass_(b,"blocklyInvalidInput")};
 Blockly.FieldTextInput.prototype.resizeEditor_=function(){var a=Blockly.FieldTextInput.htmlInput_,b=this.group_.getBBox(),c=Blockly.FieldTextInput.svgForeignObject_;c.setAttribute("width",b.width);a.style.width=b.width-2+"px";a=Blockly.getAbsoluteXY_(this.group_);b=this.sourceBlock_.workspace.getCanvas();b=Blockly.getAbsoluteXY_(b);a.x-=b.x;c.setAttribute("x",a.x-4)};
 Blockly.FieldTextInput.prototype.closeEditor_=function(a){var b=Blockly.FieldTextInput.htmlInput_;Blockly.unbindEvent_(b.onBlurWrapper_);Blockly.unbindEvent_(b.onKeyUpWrapper_);Blockly.unbindEvent_(b.onKeyPressWrapper_);Blockly.unbindEvent_(b.onWorkspaceChangeWrapper_);a?(a=b.value,this.validationFunc_&&(a=this.validationFunc_(a),null===a&&(a=b.defaultValue))):a=b.defaultValue;this.setText(a);Blockly.FieldTextInput.disposeDom_();this.sourceBlock_.render()};Blockly.FieldVariable=function(a){Blockly.FieldDropdown.call(this,Blockly.FieldVariable.dropdownCreate,Blockly.FieldVariable.dropdownChange);a?this.setText(a):this.setText(Blockly.Variables.generateUniqueName())};goog.inherits(Blockly.FieldVariable,Blockly.FieldDropdown);Blockly.FieldVariable.prototype.getValue=function(){return this.getText()};Blockly.FieldVariable.prototype.setValue=function(a){this.setText(a)};
-Blockly.FieldVariable.dropdownCreate=function(){var a=Blockly.Variables.allVariables(),b=this.getText();b&&-1==a.indexOf(b)&&a.push(b);a.sort(goog.string.caseInsensitiveCompare);a.push(Blockly.MSG_RENAME_VARIABLE);a.push(Blockly.MSG_NEW_VARIABLE);for(var b=[],c=0;c<a.length;c++)b[c]=[a[c],a[c]];return b};
+function findById(a,b){for(var c=0;c<a.length;c++)if(a[c]===b||"object"===typeof a[c]&&a[c].name===b)return 1;return-1}Blockly.FieldVariable.dropdownCreate=function(){var a=Blockly.Variables.allVariables(),b=this.getText();b&&-1==findById(a,b)&&a.push(b.name);a.sort(function(a,b){return a.name-b.name});a.push(Blockly.MSG_RENAME_VARIABLE);a.push(Blockly.MSG_NEW_VARIABLE);for(var b=[],c=0;c<a.length;c++)b[c]="string"===typeof a[c]?[a[c],a[c]]:[a[c].name,a[c]];return b};
 Blockly.FieldVariable.dropdownChange=function(a){function b(a,b){Blockly.hideChaff();var c=window.prompt(a,b);return c&&c.replace(/[\s\xa0]+/g," ").replace(/^ | $/g,"")}if(a==Blockly.MSG_RENAME_VARIABLE){var c=this.getText();(a=b(Blockly.MSG_RENAME_VARIABLE_TITLE.replace("%1",c),c))&&Blockly.Variables.renameVariable(c,a)}else a==Blockly.MSG_NEW_VARIABLE&&(a=b(Blockly.MSG_NEW_VARIABLE_TITLE,""),Blockly.Variables.renameVariable(a,a)),a&&this.setText(a);window.setTimeout(Blockly.Variables.refreshFlyoutCategory,
 1)};Blockly.Flyout=function(){this.workspace_=new Blockly.Workspace(!1)};Blockly.Flyout.prototype.autoClose=!0;Blockly.Flyout.prototype.CORNER_RADIUS=8;Blockly.Flyout.prototype.onResizeWrapper_=null;
 Blockly.Flyout.prototype.createDom=function(){this.svgGroup_=Blockly.createSvgElement("g",{},null);this.svgBackground_=Blockly.createSvgElement("path",{"class":"blocklyFlyoutBackground"},this.svgGroup_);this.svgOptions_=Blockly.createSvgElement("g",{},this.svgGroup_);this.svgOptions_.appendChild(this.workspace_.createDom());return this.svgGroup_};
